--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "tailwindcss": "^3.1.5",
     "terser-webpack-plugin": "^5.3.3",
     "typescript": "^4.7.4",
+    "uuid": "^8.3.2",
     "web-vitals": "^2.1.4",
     "webpack-manifest-plugin": "^4.1.1",
     "workbox-webpack-plugin": "^6.5.3"
@@ -95,6 +96,7 @@
     "@babel/preset-env": "^7.18.6",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
+    "@types/uuid": "^8.3.4",
     "babel-loader": "^8.2.5",
     "css-loader": "^6.7.1",
     "edit-json-file": "^1.7.0",
