--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "jest": "^27.5.1",
     "jest-resolve": "^27.5.1",
     "jest-watch-typeahead": "^1.1.0",
+    "lodash": "^4.17.21",
     "mini-css-extract-plugin": "^2.6.1",
     "postcss": "^8.4.14",
     "postcss-flexbugs-fixes": "^5.0.2",
@@ -97,6 +98,7 @@
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
     "@faker-js/faker": "^7.3.0",
+    "@types/lodash": "^4.14.182",
     "@types/uuid": "^8.3.4",
     "babel-loader": "^8.2.5",
     "css-loader": "^6.7.1",
